# modelsynic

./: .gitignore  .pre-commit-config.yaml  AI_FEATURES_SUMMARY.md  ARCHITECTURE.md  Dockerfile  Dockerfile.vllm  README.md  STRUCTURE_SUMMARY.md  VLLM_INTEGRATION.md  docker-compose.vllm.yml  docker-compose.yml  install.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
examples/: ai_workflow_example.py  basic_usage.py  vllm_example.py
modelsync/: __init__.py  config.py
modelsync/api/: main.py
modelsync/cli/: main.py
modelsync/collaboration/: __init__.py  audit.py
modelsync/core/: __init__.py  versioning.py
modelsync/deployment/: __init__.py  continuous_deploy.py
modelsync/experiments/: __init__.py  branching.py
modelsync/llm/: __init__.py  vllm_api.py  vllm_client.py
modelsync/metadata/: __init__.py  model_metadata.py
modelsync/pipelines/: __init__.py  ml_pipeline.py
modelsync/storage/: __init__.py  dataset_storage.py  model_storage.py
modelsync/utils/: __init__.py  helpers.py  logger.py
modelsync/web/: __init__.py  app.py
modelsync/web/templates/: base.html  dashboard.html
scripts/: dev_setup.py  start_api.py
tests/: test_basic.py
