[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelsync"
version = "0.1.0"
description = "A modern versioning system for AI projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ModelSync Team", email = "modelsync@example.com"}
]
keywords = ["version-control", "machine-learning", "ai", "git", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer[all]==0.9.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "gitpython==3.1.40",
    "pandas==2.1.3",
    "pydantic==2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.scripts]
modelsync = "modelsync.cli.main:app"

[project.urls]
Homepage = "https://github.com/your-username/modelsync"
Documentation = "https://github.com/your-username/modelsync#readme"
Repository = "https://github.com/your-username/modelsync"
Issues = "https://github.com/your-username/modelsync/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelsync*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
